feat: update UI components and styles, add floating delivery button, and implement data filtering utility

--- a/src/components/DefaultTemplate/CategoryCard/base.css
+++ b/src/components/DefaultTemplate/CategoryCard/base.css
@@ -1,8 +1,11 @@
 .CategoryCard {
   background-color: #8f5fef;
+  padding: 14px;
+  block-size: 160px;
 }
 .CategoryCard .CategoryName {
-  font-size: 16px;
+  font-size: 14px;
+  line-height: 20px;
   color: #f2eef8;
   text-align: center;
 }
